Add maven build option, add InMemoryBoardManager tests, fill the readme